IE/Edge overflow problem fixed

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -280,7 +280,7 @@ code {
     border: 1px solid $border-main-color;
     padding: 0.25rem;
     overflow-x: scroll;
-    overflow-wrap: normal;
+    word-wrap: normal;
     white-space: pre;
     white-space: -o-pre;
     white-space: -moz-pre;
